# cfselect

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yaml
assets/: index.html  main.css  main.js
src/: configure.rs  main.rs
src/api/: dns.rs  ip.rs  mod.rs  server.rs
src/client/: mod.rs  namesilo.rs
src/configure/: listen.rs  log.rs  mod.rs  namesilo.rs  server.rs
src/model/: mod.rs  response.rs  select.rs
src/router/: assets.rs  dns.rs  ip.rs  mod.rs  server.rs
src/server/: app.rs  mod.rs  state.rs
